Fix JitPack Compile Error